output/dev/forward3.err
output prefix: llvm/dev/forward3
llvmas: /usr/lib/llvm-3.8/bin/llvm-as
llc: /usr/lib/llvm-3.8/bin/llc
cc: gcc
codegen: /home/rafay/Desktop/decafCompiler/answer/decafcomp
stdlib: /home/rafay/Desktop/decafCompiler/answer/decaf-stdlib.c
generating llvm code:/home/rafay/Desktop/decafCompiler/answer/decafcomp ... ok
; ModuleID = 'Test'

declare void @print_int(i32)

define i32 @test(i32 %a, i32 %b) {
entry:
  %a1 = alloca i32
  store i32 %a, i32* %a1
  %b2 = alloca i32
  store i32 %b, i32* %b2
  %a3 = load i32, i32* %a1
  call void @print_int(i32 %a3)
  %b4 = load i32, i32* %b2
  call void @print_int(i32 %b4)
}

define i32 @main() {
entry:
  %calltmp = call i32 @test(i32 10, i32 13)
  ret i32 0
}
assembling to bitcode:/usr/lib/llvm-3.8/bin/llvm-as "llvm/dev/forward3.llvm" -o "llvm/dev/forward3.llvm.bc" ... failed (1)
/usr/lib/llvm-3.8/bin/llvm-as: llvm/dev/forward3.llvm:15:1: error: expected instruction opcode
}
^
converting to native code:/usr/lib/llvm-3.8/bin/llc "llvm/dev/forward3.llvm.bc" -o "llvm/dev/forward3.llvm.s" ... ok
linking:gcc -o "llvm/dev/forward3.llvm.exec" "llvm/dev/forward3.llvm.s" "/home/rafay/Desktop/decafCompiler/answer/decaf-stdlib.c" ... ok
running:llvm/dev/forward3.llvm.exec ... ok
